_scss/navbar.scss
.Navbar {
  display: flex;
  justify-content: space-between;
  padding-top: 2rem;
  align-items: center;

  &-links {
    display: flex;
    align-items: baseline;
  }

  &-link {
    margin-right: 2rem;
    font-weight: bold;
    color: $dark;
    transition: all 0.3s ease;

    &:hover {
      color: $yellow-darker;
    }

    &--active {
      color: $yellow-darker;

      &:hover {
        color: $yellow;
      }
    }
  }
}

